--- a/css/style.css
+++ b/css/style.css
@@ -127,6 +127,45 @@ a:hover::after {
      color: #B88E2F;
 }
 
+.btn{
+    background-color: #B88E2F;
+    color: black;
+    border-radius: 120px;
+    text-decoration: none;
+    position: relative;
+    padding: 10px 5px;
+    text-align: center;
+    overflow: hidden;
+    width: 30%;
+    font-weight: 700;
+    margin-top: 3rem;
+}
+
+.btn span{
+    font-size: 1rem;
+    position: relative;
+    color: white;
+}
+
+.btn::before{
+    content: '';
+    background-color: black;
+    color: white;
+    width: 0;
+    height: 0;
+    position: absolute;
+    top: const(--eixoY);
+    left: const(--eixoX);
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    transition: width .8s, height .8s;
+}
+
+.btn:hover::before{
+    width: 1000px;
+    height: 1000px;
+}
+
 .button{
     background-color: #B88E2F;
     color: black;
@@ -212,6 +251,51 @@ a:hover::after {
     margin-top: 3rem;
 }
 
+.footer-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 3rem;
+    height: 400px;
+    border: 1px solid  red;
+    margin: 3rem;
+}
+
+.footer{
+    line-height: 2rem;
+}
+
+.footer{
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+}
+
+.footer p{
+    font-weight: 600;
+}
+
+.footer h2{
+    font-size: 2rem;
+}
+
+.footer_form input{
+    width: 100%;
+    padding: 0 1rem;
+    outline: none;
+    border: none;
+    font-size: 1rem;
+}
+
+.footer_form button{
+    padding: 1rem 1.5rem;
+    outline: none;
+    border: none;
+    font-size: 1.2rem;
+    border-radius: 5px;
+
+}
 
 .content, .accessor, .products, .sub-titulo{
     visibility: hidden;
