--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ a:hover::after {
 }
 
 .btn{
-    background-color: #B88E2F;
+    background-color: black;
     color: black;
     border-radius: 120px;
     text-decoration: none;
@@ -149,7 +149,7 @@ a:hover::after {
 
 .btn::before{
     content: '';
-    background-color: black;
+    background-color: #B88E2F;
     color: white;
     width: 0;
     height: 0;
@@ -167,7 +167,7 @@ a:hover::after {
 }
 
 .button{
-    background-color: #B88E2F;
+    background-color: black;
     color: black;
     border-radius: 120px;
     text-decoration: none;
@@ -187,7 +187,7 @@ a:hover::after {
 
 .button::before{
     content: '';
-    background-color: black;
+    background-color: #B88E2F;
     color: white;
     width: 0;
     height: 0;
@@ -251,6 +251,17 @@ a:hover::after {
     margin-top: 3rem;
 }
 
+footer{
+    font-family: 'poppins';
+}
+
+.footeer{
+    font-family: 'roboto';
+    font-size: 1.3rem;
+    line-height: 1.4;
+    letter-spacing: 1;
+}
+
 .footer-container{
     display: flex;
     justify-content: center;
@@ -264,6 +275,10 @@ a:hover::after {
 
 .footer{
     line-height: 2rem;
+}
+
+.footeer{
+    letter-spacing: 1px;
 }
 
 .footer{
@@ -288,14 +303,155 @@ a:hover::after {
     font-size: 1rem;
 }
 
+.form-control label{
+    font-family: 'roboto';
+    font-weight: 700;
+}
+
 .footer_form button{
     padding: 1rem 1.5rem;
     outline: none;
     border: none;
     font-size: 1.2rem;
     border-radius: 5px;
-
 }
+
+.central{
+   height: 200px;
+   width: 100%;
+}
+
+.ajuda{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100px;
+    margin-top: 30px;
+}
+
+.bootom{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+    margin: 2rem;
+    background-color: black;
+    color: white;
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    outline: none;
+    transition: 1s;
+}
+
+.bootom:hover{
+    background-color: #B88E2F;
+    transition: 1s ease;
+}
+
+.foot-headeer{
+    /* border: 1px solid yellow; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+    width: 100%;
+    height: 600px;
+    font-family: '';
+}
+
+.container{
+    border-radius: 10px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    width: 400px;
+    max-width: 100%;
+    overflow: hidden;
+    min-height: 36vh;
+}
+
+.form{
+    padding: 20px;
+}
+
+.form-control {
+    margin-bottom: 10px;
+    padding-bottom: 20px;
+    position: relative;
+  }
+
+.form-control label {
+    display: inline-block;
+    margin-bottom: 5px;
+    letter-spacing: 1px;
+  }
+
+.form-control input {
+    border: 2px solid #f0f0f0;
+    display: block;
+    border-radius: 10px;
+    font-size: 14px;
+    width: 100%;
+    padding: 10px;
+  }
+
+.form-control i {
+    position: absolute;
+    top: 45px;
+    right: 10px;
+    visibility: hidden;
+  }
+
+.form-control small {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    visibility: hidden;
+  }
+
+.form button {
+    background-color: black;
+    border: 2px solid black;
+    color: #fff;
+    font-size: 14px;
+    width: 100%;
+    border-radius: 10px;
+    padding: 10px;
+    font-family: 'roboto';
+    letter-spacing: 2px;
+    font-weight: 700;
+    transition: 1s ease;
+  }
+
+  .form button:hover{
+    background-color: rgba(79, 198, 206, 0.932);
+    border: 2px solid rgba(79, 198, 206, 0.932);
+    color: black;
+    font-weight: 700;
+    transition: 1s ease;
+  }
+
+.form-control.success input {
+    border-color: #2ecc71;
+  }
+  
+.form-control.error input {
+    border-color: #e74c3c;
+  }
+  
+.form-control.success i.fa-check-circle {
+    color: #2ecc71;
+    visibility: visible;
+  }
+  
+.form-control.error i.fa-exclamation-circle {
+    color: #e74c3c;
+    visibility: visible;
+  }
+  
+.form-control.error small {
+    visibility: visible;
+    color: #e74c3c;
+  }
 
 .content, .accessor, .products, .sub-titulo{
     visibility: hidden;
