--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,11 @@
     box-sizing: border-box;
 }
 
+body{
+    width: 100%;
+    min-height: 100vh;
+}
+
 header.rolagem{
     background-color: #B88E2F;
     padding: 20px 4%;
@@ -44,7 +49,7 @@ main{
     font-size: 1.6rem;
 }
 
-nav{
+ nav{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -52,24 +57,24 @@ nav{
     font-family: 'poppins';
 }
 
-nav li, a{
+ nav li, a{
     text-decoration: none;
     list-style-type: none;
 }
 
-nav{
+ nav{
     color: black;
     font-weight: bold;
 }
 
-nav a {
+ nav a {
     color: black;
     position: relative;
     letter-spacing: 0.5px;
     padding: 0 10px;
 }
 
-nav a::after{
+ nav a::after{
    content: " ";
    position: absolute;
    /* display: block; */
@@ -82,11 +87,11 @@ nav a::after{
    transition: 0.3s;
 }
 
-nav a:hover{
+ nav a:hover{
     color: #B88E2F;
 }
 
-a:hover::after {
+ a:hover::after {
     width: 100%;
 }
 
@@ -260,6 +265,7 @@ footer{
     font-size: 1.3rem;
     line-height: 1.4;
     letter-spacing: 1;
+    margin-bottom: 8rem;
 }
 
 .footer-container{
@@ -430,6 +436,127 @@ footer{
     transition: 1s ease;
   }
 
+  .foot-headeer{
+    background-image: url(../img/laura-davidson-ULP07chR5EQ-unsplash.jpg);
+    background-position: center left;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .container-final{
+    width: 100%;
+    height: 500px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .redes-social{
+    display: flex;
+    align-items: center;
+    object-fit: cover;
+    padding: 1rem;
+    font-size: 2.2rem;
+    margin-bottom: 3rem;
+  }
+
+  .redes-social img{
+    height: 50px;
+  }
+
+  .paragrafo{
+    font-size: 1.2rem;
+    padding: 1rem;
+    font-weight: 500;
+  }
+
+  .icones-social{
+    display: flex;
+    gap: 40px;
+    align-items: center;
+    padding: 1rem;
+  }
+
+  .icones-social img{
+    height: 30px;
+    cursor: pointer;
+  }
+
+
+  .container-padra{
+    display: flex;
+  }
+
+ 
+
+  .home a {
+    display: flex;
+    flex-direction: column;
+    color: black;
+    position: relative;
+    letter-spacing: 0.5px;
+    padding: 0 10px;
+    text-decoration: none;
+    list-style-type: none;
+  }
+
+  .home a::after{
+    content: " ";
+    position: absolute;
+    /* display: block; */
+    width: 0;
+    height: 3px;
+    left: 0;
+    background-color: #B88E2F;
+    letter-spacing: 0.9px;
+    bottom: -2px;
+    transition: 0.3s;
+ }
+
+ .home a:hover{
+    color: #B88E2F;
+}
+
+ .home a:hover::after {
+    width: 90%;
+}
+
+  .nossa{
+   margin-bottom: 3rem;
+   padding: 1rem;
+  }
+
+  .pagamentos{
+    height: 70px;
+    background-color: black;
+    width: 100%;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .clarron{
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    padding: 1rem;
+    letter-spacing: 2px;
+    font-weight: 600;
+  }
+
+ .cartoes{
+    display: flex;
+    text-align: center;
+    gap: 50px;
+    padding: 1rem;
+ }
+
+ .cartoes img {
+    width: 70px;
+ }
+
+
 .form-control.success input {
     border-color: #2ecc71;
   }
@@ -453,6 +580,6 @@ footer{
     color: #e74c3c;
   }
 
-.content, .accessor, .products, .sub-titulo{
+.content, .accessor, .products, .sub-titulo, .ajuda, .btn{
     visibility: hidden;
 }
